@@ -1,4 +1,5 @@
 ## PLUXML x.x (sortie : xx/xx/xxxx) ##
+[+] [admin menu] Les id de liste pour chaque menu sont fixes : url basename (style compatible multilingue) : class.plx.utils.php : formatMenu() : portée css id admin/top.php : li#mnu_nomPageAdminSansPointPhp ou li#mnu_LeNomDuPlugin (@sudwebdesign)
 [+] [admin sessions] Change le profil de la session utilisateur sans qu'il est a se reconnecter s'il est re-profilé ou le déconnecte s'il est désactivé ou supprimé. Ceci dès sa prochaine action après le réglage d'un admin. (@sudwebdesign)
 [+] [admin css] thème default : Élargir les bords entre 64 & 128rem + règles css print (1024 & 2048px). (@sudwebdesign #d0b06f6)
 [+] [admin media] Indique le nombre Maximum de fichiers téléversable en un seul jet (number of files per upload + langues) (@sudwebdesign #6cbf7aa #f1e49e3 #a78448e)
